fix: Java 启动器兼容 Java 8（CI 编译环境）
- Path.of/transferTo 替换为 Paths.get 与字节缓冲复制\n- 修复 GitHub Actions Temurin 8 下 Maven 编译失败

Co-authored-by: Cursor <cursoragent@cursor.com>